# qa_guru_python_Venv_Poerty

project-poetry/: pyproject.toml
project-poetry/tests/: run_test.py
