[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["Artem <armlynskii@gmail.com>"]
readme = "README.md"
packages = [{include = "project_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = "2.0.0b14"

[tool.poetry.dev-dependencies]
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
